--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
+                        In the series Mortal Kombat, the winner gets to execute the loser with a finishing move appropriately called this.
                 </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong6">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right6">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong6">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong6">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right6">What is Fatality</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong6">What is Assassination</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong6">What is Execution</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong6">What is Evisceration </button>
                 </div>
              </div>
         </div>
