--- a/index.html
+++ b/index.html
@@ -309,14 +309,13 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        This side-scrolling game pits various DC heroes and villains against each other.                </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong11">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right11">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong11">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong11">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong11">What is DC Universe Online</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong11">What is Tekken</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong11">What is Marvel Vs. Capcom</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right11">What is Injustice</button>
                 </div>
              </div>
         </div>
