--- a/index.html
+++ b/index.html
@@ -433,14 +433,13 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        _______: Ultimate Ninja Storm, A lineup of games based off a popular Anime                </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong16">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right16">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong16">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong16">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong16">What is Blood+</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right16">What is Naruto</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong16">What is Persona</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong16">What is Blade and Soul</button>
                 </div>
              </div>
         </div>
