--- a/index.html
+++ b/index.html
@@ -557,14 +557,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        This game allows you to play as a number of Pokemon in a real time fight for victory.
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong21">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right21">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong21">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong21">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong21">What is Guilty Gear</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong21">What is Pokemon: Let's Go</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong21">What is The King of Fighters</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right21">What is Pokken Tournament</button>
                 </div>
              </div>
         </div>
