--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        A Popular JRPG, this game sets you on the brave frontier of a new world that is teeming with giant monsters to slay and research.
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong2">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right2">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong2">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong2">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right2">What is Monster Hunter</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong2">What is Dragon Age</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong2">What is Dark Souls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong2">What is The Witcher</button>
                 </div>
              </div>
         </div>
@@ -563,7 +563,7 @@
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
                     <button type="button" data-dismiss="modal" class="btn btn-primary wrong21">What is Guilty Gear</button>
                     <button type="button" data-dismiss="modal" class="btn btn-primary wrong21">What is Pokemon: Let's Go</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong21">What is The King of Fighters</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong21">What is Brawlhalla</button>
                     <button type="button" data-dismiss="modal" class="btn btn-primary right21">What is Pokken Tournament</button>
                 </div>
              </div>
