--- a/index.html
+++ b/index.html
@@ -209,14 +209,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        In Fallout 4, a RPG game by Bethesda, humans are being replaced by robotic versions of themselves called this.
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong7">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right7">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong7">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong7">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong7">What is Androids</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong7">What is Cyborgs</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right7">What is Synths</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong7">What is Drones</button>
                 </div>
              </div>
         </div>
@@ -333,14 +333,15 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
+                      In this game, the plaIn this game you play as a fallen child in the realm of monsters. The outcome of the game is ultimately decided by how you choose to approach other people. Everything is not what it seems.
+                      yers can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
                 </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong12">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right12">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong12">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong12">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong12">What is Earthbound</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong12">What is Stardew Valley</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong12">What is Baldurs Gate</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong12">What is Undertale</button>
                 </div>
              </div>
         </div>
