--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     <button type="button" data-dismiss="modal" class="btn btn-primary wrong12">What is Earthbound</button>
                     <button type="button" data-dismiss="modal" class="btn btn-primary wrong12">What is Stardew Valley</button>
                     <button type="button" data-dismiss="modal" class="btn btn-primary wrong12">What is Baldurs Gate</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong12">What is Undertale</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right12">What is Undertale</button>
                 </div>
              </div>
         </div>
