--- a/index.html
+++ b/index.html
@@ -458,14 +458,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        This game is soon to release and sets you in a sci-fi future of our own world, where body modification and megacorporations are common place. All you wanna do is survive.
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong17">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right17">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong17">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong17">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong17">What is Mass Effect</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right17">What is Cyberpunk2077</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong17">What is Fallout</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong17">What is StarWars</button>
                 </div>
              </div>
         </div>
