--- a/index.html
+++ b/index.html
@@ -583,14 +583,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        In this game, you are the godwoken, on a quest to become the next divine and rule the world as you see fit. Even if you have to strike down your comrades.
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong22">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right22">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong22">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong22">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong22">What is Skyrim</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong22">What is The Witcher</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong22">What is Diablo 3</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right22">What is Divinity</button>
                 </div>
              </div>
         </div>
