--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        This game, by the creators of Halo, is another space adventure shooter that has players run missions against the darkness in the name of Light. Everyone gets a companion named Ghost.
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong3">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right3">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong3">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong3">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong3">What is Star Trek</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong3">What is Mass Effect</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong3">What is Titanfall</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right3">What is Destiny</button>
                 </div>
              </div>
         </div>
