--- a/index.html
+++ b/index.html
@@ -234,14 +234,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        In this team based shooter, you can choose from a variety of classes. Although what’s equally important to fighting is collecting hats
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong8">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right8">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong8">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong8">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong8">What is Loadout</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong8">What is Overwatch</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right8">What is Team Fortress 2</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong8">What is Lawbreakers</button>
                 </div>
              </div>
         </div>
