--- a/index.html
+++ b/index.html
@@ -359,14 +359,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        This was the first first-person-shooter game to enter the competitive scene. 
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong13">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right13">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong13">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong13">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong13">What is CSGO</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong13">What is Doom</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right13">What is Quake</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong13">What is Overwatch</button>
                 </div>
              </div>
         </div>
