--- a/index.html
+++ b/index.html
@@ -483,14 +483,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        Rainbow Six Siege is one of the games in a series based on the books of this author
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong18">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right18">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong18">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong18">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong18">What is Dale Brown</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong18">What is Jeff Rovin</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong18">What is Patrick Robinson</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right18">What is Tom Clancy</button>
                 </div>
              </div>
         </div>
