--- a/index.html
+++ b/index.html
@@ -608,14 +608,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        This game sucks
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong23">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right23">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong23">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong23">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right23">What is Fortnite</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right23">What is Fortnite</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right23">What is Fortnite</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right23">What is Fortnite</button>
                 </div>
              </div>
         </div>
