--- a/index.html
+++ b/index.html
@@ -134,14 +134,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        The name of this game is also what you shout when someone only has one card in their hand.
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong4">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right4">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong4">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong4">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong4">What is Go Fish</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right4">What is Uno</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong4">What is Poker</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong4">What is BS</button>
                 </div>
              </div>
         </div>
