--- a/index.html
+++ b/index.html
@@ -259,14 +259,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        This party game has a ‘card czar’ that judges the players response cards to the prompt
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong9">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right9">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong9">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong9">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong9">What is Pathfinder Adventures</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong9">What is Gin Rummy</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right9">What is Cards Against Humanity</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong9">What is Blackjack</button>
                 </div>
              </div>
         </div>
