--- a/index.html
+++ b/index.html
@@ -384,14 +384,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        In this card game anime, the characters have duels that are decided by the strength of their cards and the wit of the players. They actually feel the pain when their health is dropped.
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong14">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right14">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong14">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong14">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right14">What is YuGiOh</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong14">What is Aikatsu</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong14">What is Duel Masters</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong14">What is Cardfight!</button>
                 </div>
              </div>
         </div>
