--- a/index.html
+++ b/index.html
@@ -508,14 +508,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        Hearthstone, a fantasy card game by Blizzard Entertainment, supports this many players at a time
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong19">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right19">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong19">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong19">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong19">What is Four</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right19">What is Two</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong19">What is Six</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong19">What is Three</button>
                 </div>
              </div>
         </div>
