--- a/index.html
+++ b/index.html
@@ -633,14 +633,14 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        One of the most popular fantasy card games of all time, typically played with 3-4 people. You are a planeswalker who summons cards and uses strategy and good deck building overwhelm your opponent.
+                    </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong24">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right24">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong24">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong24">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right24">What is Magic</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong24">What is Pokemon</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong24">What is Sol Forge</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong24">What is Slay the Spire</button>
                 </div>
              </div>
         </div>
