--- a/index.html
+++ b/index.html
@@ -159,14 +159,13 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        In this game, you can choose between the alliance or the horde for dominance over Azeroth                </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong5">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right5">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong5">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong5">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong5">What is Blade and Soul</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong5">What is Rift</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong5">What is Neverwinter</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right5">What is World of Warcraft</button>
                 </div>
              </div>
         </div>
