--- a/index.html
+++ b/index.html
@@ -283,14 +283,13 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        This whole game revolves around your relationship with your mount, there are tons to collect                </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong10">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right10">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong10">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong10">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right10">What is Riders of Icarus </button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong10">What is Bless Online</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong10">What is TERA</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong10">What is WildStar</button>
                 </div>
              </div>
         </div>
@@ -408,14 +407,13 @@
                       </butt>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        Starting out as a side-scrolling chibi MMO, this game has transitioned to a 3D top-down beat-em-up.                </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong15">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right15">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong15">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong15">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong15">What is Dragon Nest</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong15">What is Crowfall</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong15">What is ArcheAge</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right15">What is Maplestory</button>
                 </div>
              </div>
         </div>
@@ -532,14 +530,13 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                            In Final Fantasy XIV, by Square Enix, the grand company "Maelstrom" calls this main town it's home.                </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong20">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right20">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong20">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong20">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong20">What is Ul'dah</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong20">What is Kugane</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right20">What is Limsa Lominsa</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong20">What is Gridania</button>
                 </div>
              </div>
         </div>
@@ -657,14 +654,13 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the players can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
-                </div>
+                        The most defining feature of this MMO is it's world vs. world pvp. It's a true war.                </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong25">What is Street Fighter</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary right25">What is Smash</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong25">What is Soul Calibur</button>
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong25">What is Skullgirls</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong25">What is Black Desert</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong25">What is ESO</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary right25">What is Guild Wars 2</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong25">What is EVE  </button>
                 </div>
              </div>
         </div>
