--- a/index.html
+++ b/index.html
@@ -331,8 +331,7 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                      In this game, the plaIn this game you play as a fallen child in the realm of monsters. The outcome of the game is ultimately decided by how you choose to approach other people. Everything is not what it seems.
-                      yers can pick from a number of Nintendo character to play with the goal of knocking their opponent out of the arena.
+                      In this game you play as a fallen child in the realm of monsters. The outcome of the game is ultimately decided by how you choose to approach other people. Everything is not what it seems.
                 </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
@@ -629,7 +628,7 @@
                       </button>
                     </div> -->
                  <div class="modal-body modalCustom modalBodyCustom">
-                        One of the most popular fantasy card games of all time, typically played with 3-4 people. You are a planeswalker who summons cards and uses strategy and good deck building overwhelm your opponent.
+                        One of the most popular fantasy card games of all time, typically played with 2-4 people. You are a planeswalker who summons cards and uses strategy and good deck building overwhelm your opponent.
                     </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
