--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Aldrich|Press+Start+2P" rel="stylesheet">
 </head>
 <body>
     <div id="gameHeader"><h1 id="title">Gaming Jeopardy</h1> <h2 id="score">Score: $<span id="scoreValue">0</span></h2> <h3 id="endgame">End Game</h3></di>
