Added Daily Double

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 <body>
     <div id="gameHeader"><h1 id="title">Gaming Jeopardy</h1> <h2 id="score">Score: $<span id="scoreValue">0</span></h2> <h3 id="endgame">End Game</h3></di>
     <div class="jeopardyGrid">
-        <div class="categories">Fighters</div>
-        <div class="categories">RPGs</div>
-        <div class="categories">Shooters</div>
+        <div class="categories">Fighter</div>
+        <div class="categories">RPG</div>
+        <div class="categories">Shooter</div>
         <div class="categories">Card</div>
-        <div class="categories">MMOs</div>
+        <div class="categories">MMO</div>
         <div class="questions" id="q1" data-value="100" data-toggle="modal" data-target="#q1modal" >$100</div>
         <div class="questions" id="q2" data-value="100" data-toggle="modal" data-target="#q2modal">$100</div>
         <div class="questions" id="q3" data-value="100" data-toggle="modal" data-target="#q3modal">$100</div>
@@ -34,7 +34,7 @@
         <div class="questions" id="q14" data-value="300" data-toggle="modal" data-target="#q14modal">$300</div>
         <div class="questions" id="q15" data-value="300" data-toggle="modal" data-target="#q15modal">$300</div>
         <div class="questions" id="q16" data-value="400" data-toggle="modal" data-target="#q16modal">$400</div>
-        <div class="questions" id="q17" data-value="400" data-toggle="modal" data-target="#q17modal">$400</div>
+        <div class="questions" id="q17" data-value="800" data-toggle="modal" data-target="#q17modal">$400</div>
         <div class="questions" id="q18" data-value="400" data-toggle="modal" data-target="#q18modal">$400</div>
         <div class="questions" id="q19" data-value="400" data-toggle="modal" data-target="#q19modal">$400</div>
         <div class="questions" id="q20" data-value="400" data-toggle="modal" data-target="#q20modal">$400</div>
@@ -353,7 +353,7 @@
             <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
                 <div class="modal-content">
                  <div class="modal-body modalCustom modalBodyCustom">
-                        This game is soon to release and sets you in a sci-fi future of our own world, where body modification and megacorporations are common place. All you wanna do is survive.
+                     <span id="dDouble">Daily Double! (Point Value is Doubled)</span>  This game is soon to release and sets you in a sci-fi future of our own world, where body modification and megacorporations are common place. All you wanna do is survive.
                     </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
