Fixed up a question

--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
                     </div>
                 <div class="modal-footer modalCustom modalFooterCenter">
                       <!-- <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button> -->
-                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong9">What is Pathfinder Adventures</button>
+                    <button type="button" data-dismiss="modal" class="btn btn-primary wrong9">What is Pathfinder</button>
                     <button type="button" data-dismiss="modal" class="btn btn-primary wrong9">What is Gin Rummy</button>
                     <button type="button" data-dismiss="modal" class="btn btn-primary right9">What is Cards Against Humanity</button>
                     <button type="button" data-dismiss="modal" class="btn btn-primary wrong9">What is Blackjack</button>
